<resources>
    <string name="app_name">Tarea2</string>
    <string name="input_correo">Correo</string>
    <string name="input_contrasena">Contraseña</string>
    <string name="titulo_login">Iniciar Sesión</string>
    <string name="titulo_productos">Productos disponibles</string>
    <string name="remember_check">Mantener abierta la sesión</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="button_comprar">Comprar</string>
    <string name="card_title_1">Playera</string>
    <string name="card_price_1">$500.00</string>
    <string name="card_desc_1">Foto de playera</string>
    <string name="card_title_2">Zapatos</string>
    <string name="card_price_2">$1200.00</string>
    <string name="card_desc_2">Foto de zapatos</string>
    <string name="card_title_3">Pantalon</string>
    <string name="card_price_3">$800.00</string>
    <string name="card_desc_3">Foto de pantalón</string>
    <string name="card_title_4">Gorra</string>
    <string name="card_price_4">$300.00</string>
    <string name="card_desc_4">Foto de gorra</string>
    <string name="card_title_5">Lentes</string>
    <string name="card_price_5">$300.00</string>
    <string name="card_desc_5">Foto de lentes</string>
    <string name="card_title_6">Calcetines</string>
    <string name="card_price_6">$150.00</string>
    <string name="card_desc_6">Foto de calcetines</string>
</resources>